adds some changes in the code, adds random quotes regarding joke

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h1 class="joke__title"></h1>
       <p class="joke__text"></p>
       <span class="joke__smile"></span>
+      <p class="joke__reaction"></p>
     </section>
     <button type="button" class="content__btn">...click to get a dad's joke!</button>
   </main>
